--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style/style.css">
+    <script src="https://kit.fontawesome.com/6a7e691908.js" crossorigin="anonymous"></script>
     <div class="navbar">
         <div>
             
             <ul>
-                <li><a onclick="scrollviewfirst()">Home</a></li>
-                <li><a onclick="scrollviewsecond()">About</a></li>
+                <li><a onclick="scrollviewfirst()">Home</i></a></li>
+                <li><a onclick="scrollviewsecond()">About</i></a></li>
                 <li><a onclick="scrollviewthird()">Portfolio</a></li>
 
             </ul>
@@ -26,7 +27,7 @@
             <h2>The First Section</h2>
         </div>
     </section>
-
+    <br>
 
     <section class="hidden" id="second">
         <div>
@@ -34,6 +35,7 @@
         </div>
     </section>
 
+    <br>
     
     <section class="hidden" id="third">
         <div>
