--- a/index.html
+++ b/index.html
@@ -25,17 +25,6 @@
                     </div>
                     <div class="foreshadow">
                         <h4>My Works</h4>
-                        <div class="carousel">
-                            <div class="carousel-img">
-                                <img src="/assets/wordpress-img-ad.jpeg" alt="">
-                            </div>
-                            <div class="carousel-img">
-                                <img src="/assets/wordpress-img-ad.jpeg" alt="">
-                            </div>
-                            <div class="carousel-img">
-                                <img src="/assets/wordpress-img-ad.jpeg" alt="">
-                            </div>
-                        </div>
                     </div>
                 </div>
                 
@@ -45,9 +34,10 @@
             <div class="sidebar">
                 <ul>
                     <li><a href=""><i  class="fa-brands fa-linkedin"></i></a></li>
-                    <li><a href=""><i class="fa-brands fa-square-instagram"></i></a></li>
-                    <li><a href=""><i class="fa-brands fa-square-github"></i></a></li>
-                    <li><a href=""><i class="fa-brands fa-square-x-twitter"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-github"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-x-twitter"></i></a></li>
+
                 </ul>
                 
             </div>
